--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1836,6 +1836,63 @@
     "deploy keys":"配置秘钥",
     "secrets and variables":"秘钥和变量",
 
+    "skip to content": "跳转到内容",
+    "to search": "搜索",
+    "account menu": "账户菜单",
+    "try enterprise": "试用企业版",
+    "try copilot": "试用Copilot",
+    "edit status": "编辑状态",
+    "busy": "忙碌",
+    "when others mention you, assign you, or request your review, github will let them know that you have limited availability.": "当其他人提到您、分配给您或请求您的审查时，GitHub会告诉他们您的时间有限。",
+    "clear status": "清除状态",
+    "never": "从不",
+    "by": "作者",
+    "adding": "添加",
+    "will show everything without a label.": "将显示没有标签的所有内容。",
+    "protip!": "专业提示！",
+    "issues - created": "问题 - 创建的",
+    "accessibility": "可访问性",
+    "access": "访问",
+    "billing and plans": "计费和计划",
+    "plans and usage": "计划和使用情况",
+    "spending limits": "消费限制",
+    "payment information": "付款信息",
+    "password and authentication": "密码和身份验证",
+    "enterprises": "企业",
+    "moderation": "管理",
+    "code review limits": "代码审查限制",
+    "copilot": "Copilot",
+    "code security and analysis": "代码安全和分析",
+    "your name may appear around github where you contribute or are mentioned. you can remove it at any time.": "您的姓名可能会出现在您贡献或被提及的GitHub上。您可以随时删除它。",
+    "you have set your email address to private. to toggle email privacy, go to": "您已将电子邮件地址设置为私有。要切换电子邮件隐私，请转到",
+    "and uncheck \"keep my email address private.\"": "并取消选中\"保持我的电子邮件地址私有\"。",
+    "you can": "您可以",
+    "other users and organizations to link to them.": "其他用户和组织可以链接到它们。",
+    "your company’s github organization to link it.": "将您公司的GitHub组织链接到它。",
+    "display current local time": "显示当前本地时间",
+    "other users will see the time difference from their local time.": "其他用户将看到与其本地时间的时间差。",
+    "all of the fields on this page are optional and can be deleted at any time, and by filling them out, you're giving us consent to share this data wherever your user profile appears. please see our": "此页面上的所有字段都是可选的，可以随时删除，并通过填写它们，您同意我们在您的用户配置文件出现的任何地方共享此数据。请参阅我们的",
+    "to learn more about how we use this information.": "以了解有关我们如何使用此信息的更多信息。",
+    "privacy statement": "隐私声明",
+    "contributions & activity": "贡献和活动",
+    "enabling this will hide your contributions and activity from your github profile and from social features like followers, stars, feeds, leaderboards and releases.": "启用此功能将隐藏您在GitHub配置文件和关注者、星标、动态、排行榜和发布等社交功能中的贡献和活动。",
+    "your contribution graph, achievements, and activity overview will show your private contributions without revealing any repository or organization information.": "您的贡献图、成就和活动概述将显示您的私人贡献，而不会透露任何存储库或组织信息。",
+    "read more": "阅读更多",
+    "update preferences": "更新首选项",
+    "show achievements on my profile": "在我的个人资料上显示成就",
+    "your achievements will be shown on your profile.": "您的成就将显示在您的个人资料上。",
+    "building an application, service, or tool that integrates with github?": "正在构建与GitHub集成的应用程序、服务或工具？",
+    ", or read more about it at our": "，或在我们的",
+    "join the github developer program": "加入GitHub开发者计划",
+    "developer site": "开发者网站",
+    "jobs profile": "工作配置文件",
+    "available for hire": "可供雇佣",
+    "save jobs profile": "保存工作配置文件",
+    "we'll use this language preference to filter the trending repository lists on": "我们将使用此语言偏好在",
+    "our": "我们的",
+    "page.": "页面上过滤热门存储库列表。",
+    "trending repositories": "热门存储库",
+
     "__dict-end": "end"
   }
 }
