fix: 时间翻译 & 过度翻译

--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -73,6 +73,8 @@
     "today": "今天",
     "this week": "本周",
     "this month": "本月",
+    "released": "发布",
+    "recommended for you": "为您推荐",
 
     "__comments-3": "explore",
     "collections": "集合",
