--- a/locales/ja.json
+++ b/locales/ja.json
@@ -39,6 +39,17 @@
     "november": "11月",
     "dec": "12月",
     "december": "12月",
+
+    "hours ago": "時間前",
+    "minutes ago": "分前",
+
+    "sunday": "日曜日",
+    "monday": "月曜日",
+    "tuesday": "火曜日",
+    "wednesday": "水曜日",
+    "thursday": "木曜日",
+    "friday": "金曜日",
+    "saturday": "土曜日",
     
     "__comments-2": "HomePage",
     "sign in": "サインイン",
@@ -46,24 +57,133 @@
     "team": "チーム",
     "enterprise": "企業",
     "pricing": "価格",
-    "search github": "検索 GitHub",
+    "search github": "GitHubを検索",
+    "why github?": "GitHubの強み",
+    "email address": "メールアドレス",
     "built for developers": "開発者のためのプラットフォーム",
+    "sign up for github": "GitHubにサインアップ",
+    "refresh": "リフレッシュ",
+    "developers": "開発者",
+    "fortune 50": "fortune 50",
+    "spoken language:": "使用言語",
+    "any": "所有",
+    "date range:": "日付範囲",
+    "today": "今日",
+    "this week": "今週",
+    "this month": "今月",
+    "released": "公開済み",
+    "recommended for you": "あなたへのおすすめ",
 
     "__comments-3": "explore",
+    "collections": "コレクション",
+    "trending": "トレンド",
+    "events": "イベント",
+    "github sponsors": "GitHubスポンサー",
 
     "__comments-4": "Bottom",  
+    "terms": "利用規約",
+    "contact github": "GitHubに連絡",
+    "privacy": "プライバシー",
+    "blog": "ブログ",
+    "help": "ヘルプ",
+    "shop": "ショップ",
+    "status": "ステータス",
+    "training": "トレンド",
+    "docs": "ドキュメント",
+    
+    "__comments-5": "Signup & Login",
+    "already have an account? ": "すでにアカウントがありますか？",
+    "sign in →": "サインイン →",
+    "welcome to github!": "ようこそGitHubへ!",
+    "let’s begin the adventure": "冒険を始めよう",
+    "enter your email": "メールアドレスを入力",
+    "continue": "続ける",
+    "email is invalid or already taken": "メールアドレスが間違っているか、既に使用済みです。",
+    "create a password": "パスワードを設定",
+    "password is too short": "パスワードが短すぎます",
+    "password needs a number and lowercase letter": "パスワードは数字と小文字が必要です",
+    "password is strong": "強固なパスワードです",
+    "make sure it's": "パスワードは",
+    "at least 15 characters": "少なくとも15文字以上",
+    "or": "あるいは",
+    "at least 8 characters": "数字と",
+    "including a number": "小文字を含んだ",
+    "and a lowercase letter": "8文字以上にしてください。",
+    "password may be compromised": "このパスワードは漏洩している可能性があります",
+    "password is in a list of passwords commonly used on other websites": "このパスワードはよく使われる脆弱なパスワードです",
+    "enter a username": "ユーザー名を入力",
+    "username may only contain alphanumeric characters or single hyphens, and cannot begin or end with a hyphen.": "ユーザー名はアルファベットとハイフンのみ使用でき、先頭と最後は必ずアルファベットを使用してください",
+    "would you like to receive product updates and announcements via email?": "メールでアップデートとアナウンス情報を受け取る。",
+    "type \"y\" for yes or \"n\" for no": "同意する場合は \"y\" 拒否する場合は \"n\" と入力してください",
+    "verify your account": "アカウントを認証",
+    "create account": "アカウントを作成",
+    "by creating an account, you agree to the": "アカウントを作成することで",
+    "terms of service": "利用規約",
+    ". for more information about github's privacy practices, see the": "に同意したものとみなされます。プライバシーに関しては",
+    "github privacy statement": "GitHubプライバシーステートメント",
+    ". we'll occasionally send you account-related emails.": "をご覧ください。なお、アカウントに関するEメールをお送りすることがあります。",
 
-    "__comments-5": "Login & Register",  
-    "username": "ユーザー名",
-    "email": "メール",
-    "email address": "電子メールアドレス",
+    "sign in to github": "GitHubに登録",
+    "username or email address": "ユーザー名またはメールアドレス",
     "password": "パスワード",
-    "sign up for github": "アカウント登録",
-    "sign in to gitHub": "ログイン",
-    "username or email address": "メールまたはユーザー名",
-    "forgot password?": "パスワードをお忘れですか？",
-    "create an account": "アカウント作成",
-    "create account": "アカウント作成",
+    "forgot password?": "パスワードを忘れましたか？",
+    "incorrect username or password.": "ユーザー名かパスワードが間違っています",
+    "new to github?": "GitHubは初めてですか？",
+    "create an account": "アカウントを作成",
+    "learn more": "もっと知る",
+    "learn more.": "もっと知る。",
+    "confirm password to continue": "パスワードを確認して続ける",
+    "confirm password": "パスワードを確認",
+    "tip:": "ヒント:",
+    "signing in…": "サインイン中…",
+    "authentication code": "認証コード",
+    "what’s this?": "これについて",
+    "6-digit code": "6桁の数字",
+    "verify": "認証",
+    "verifying": "認証中",
+    "verifying…": "認証中…",
+    "open the two-factor authentication app on your device to view your authentication code and verify your identity.": "お使いのデバイスで2FAアプリを開いて本人確認を行います。",
+    "having problems?": "問題がありますか？",
+    "enter a two-factor recovery code": "リカバリーコードを入力",
+    "can’t access your two-factor device or valid recovery codes?": "認証端末またはリカバリーコードにアクセスできませんか？",
+    "recovering your account": "アカウントを回復",
+    "if you can’t access a verified device or recovery codes you can request a reset of your authentication settings. for security reasons": "アカウントまたはリカバリーコードにアクセスできない場合、認証設定のリセットをリクエストすることができます",
+    "this can take 3-5 business days": "これには3-5営業日がかかります",
+    "step 1": "ステップ1",
+    "verify an email associated with this account.": "このアカウントでメールアドレスを認証。",
+    "step 2": "ステップ2",
+    "verify a device, ssh key or personal access token.": "SSHキーまたはパーソナルアクセストークンでデバイスを認証。",
+    "step 3": "ステップ3",
+    "github support will review your request": "GitHubサポートがリクエストを確認します。この作業は",
+    "within 3-5 business days": "3-5営業日以内に行われます。",
+    "i understand, get started": "理解して続ける",
+    "two-factor authentication failed.": "2要素認証に失敗しました。",
+    "two-factor recovery": "2要素リカバリー",
+    "recovery code": "リカバリーコード",
+    "you can enter one of your recovery codes in case you lost access to your mobile device.": "you can enter one of your recovery codes in case you lost access to your mobile device.",
+    "still having problems?": "まだ問題がありますか？",
+    "recovery code authentication failed.": "recovery code authentication failed.",
+    "account recovery": "アカウント回復",
+    "first we need to verify an email address": "first we need to verify an email address",
+    "by sending a one-time password to all addresses associated with this account.": "by sending a one-time password to all addresses associated with this account.",
+    "send one-time password": "OTPコードを送信",
+    "skip this with recovery codes": "skip this with recovery codes",
+    "if you can locate your two-factor recovery codes you can skip this recovery process.": "if you can locate your two-factor recovery codes you can skip this recovery process.",
+    "the file containing your recovery codes may exist on your computer - check  for a file named": "the file containing your recovery codes may exist on your computer - check  for a file named",
+    "enter recovery code": "enter recovery code",
+    "sign in to": "sign in to",
+    "to continue to": "to continue to",
+
+    "confirm your account recovery settings": "confirm your account recovery settings",
+    "are your account recovery settings up to date? if not, you risk getting locked out of your account.": "are your account recovery settings up to date? if not, you risk getting locked out of your account.",
+    "update": "更新",
+    "confirm": "確認",
+    "remind me later": "また後で",
+    "configured": "configured",
+    "no security keys": "no security keys",
+    "not configured": "not configured",
+    "no fallback sms number": "no fallback sms number",
+    "no recovery tokens": "no recovery tokens",
 
     "__comments-6": "User home", 
     "pull requests": "プルリクエスト",
@@ -89,6 +209,7 @@
     "languages": "言語",
     "about": "説明",
     "code": "コード",
+    "Actions": "アクション",
     "owner": "オーナー",
     "repository name": "リポジトリ名",
     "description": "説明",
@@ -105,7 +226,7 @@
     "tags": "タグ",
 
     "__comments-12": "Create a Repository",
-    "create a new repository": "リポジトリを作成する",
+    "create a new repository": "新規リポジトリを作成する",
     "create repository": "リポジトリを作成する",
     "great repository names are short and memorable. need inspiration? how about": "リポジトリに、短くて覚えやすい名前を入力します。 たとえば、"
   }
