--- a/locales/ja.json
+++ b/locales/ja.json
@@ -160,9 +160,9 @@
     "two-factor authentication failed.": "2要素認証に失敗しました。",
     "two-factor recovery": "2要素リカバリー",
     "recovery code": "リカバリーコード",
-    "you can enter one of your recovery codes in case you lost access to your mobile device.": "you can enter one of your recovery codes in case you lost access to your mobile device.",
+    "you can enter one of your recovery codes in case you lost access to your mobile device.": "モバイルデバイスにアクセスできない場合はリカバリーコードを使用することができます。",
     "still having problems?": "まだ問題がありますか？",
-    "recovery code authentication failed.": "recovery code authentication failed.",
+    "recovery code authentication failed.": "リカバリーコードの認証に失敗しました。",
     "account recovery": "アカウント回復",
     "first we need to verify an email address": "first we need to verify an email address",
     "by sending a one-time password to all addresses associated with this account.": "by sending a one-time password to all addresses associated with this account.",
