--- a/locales/ja.json
+++ b/locales/ja.json
@@ -132,8 +132,8 @@
     "create an account": "アカウントを作成",
     "learn more": "もっと知る",
     "learn more.": "もっと知る。",
-    "confirm password to continue": "パスワードを確認して続ける",
-    "confirm password": "パスワードを確認",
+    "confirm password to continue": "パスワードを確定して続ける",
+    "confirm password": "パスワードを確定",
     "tip:": "ヒント:",
     "signing in…": "サインイン中…",
     "authentication code": "認証コード",
@@ -164,20 +164,20 @@
     "still having problems?": "まだ問題がありますか？",
     "recovery code authentication failed.": "リカバリーコードの認証に失敗しました。",
     "account recovery": "アカウント回復",
-    "first we need to verify an email address": "first we need to verify an email address",
+    "first we need to verify an email address": "メールアドレスの認証が必要です",
     "by sending a one-time password to all addresses associated with this account.": "by sending a one-time password to all addresses associated with this account.",
     "send one-time password": "OTPコードを送信",
-    "skip this with recovery codes": "skip this with recovery codes",
+    "skip this with recovery codes": "リカバリーコードを使用する",
     "if you can locate your two-factor recovery codes you can skip this recovery process.": "if you can locate your two-factor recovery codes you can skip this recovery process.",
     "the file containing your recovery codes may exist on your computer - check  for a file named": "the file containing your recovery codes may exist on your computer - check  for a file named",
-    "enter recovery code": "enter recovery code",
-    "sign in to": "sign in to",
-    "to continue to": "to continue to",
+    "enter recovery code": "リカバリーコードを入力",
+    "sign in to": "サインイン",
+    "to continue to": "続ける",
 
-    "confirm your account recovery settings": "confirm your account recovery settings",
+    "confirm your account recovery settings": "アカウントのリカバリー設定を確定",
     "are your account recovery settings up to date? if not, you risk getting locked out of your account.": "are your account recovery settings up to date? if not, you risk getting locked out of your account.",
     "update": "更新",
-    "confirm": "確認",
+    "confirm": "確定",
     "remind me later": "また後で",
     "configured": "configured",
     "no security keys": "no security keys",
@@ -186,12 +186,53 @@
     "no recovery tokens": "no recovery tokens",
 
     "__comments-6": "User home", 
+    "filter": "フィルター",
+    "send feedback": "フィードバックを送信",
+    "latest changes": "最新の更新",
+    "signed in as": "サインイン中",
+    "set status": "ステータスを設定",
+    "new repository": "新規リポジトリ",
+    "import repository": "リポジトリをインポート",
+    "new gist": "新規スニペット",
+    "new organization": "新規組織",
+    "new project": "新規プロジェクト",
+    "your profile": "あなたのプロフィール",
+    "your repositories": "あなたのリポジトリ",
+    "your organizations": "あなたの組織",
+    "your codespaces": "あなたのコードスペース",
+    "your projects": "あなたのプロジェクト",
+    "your discussions": "あなたの議論",
+    "your stars": "あなたのお気に入り",
+    "your gists": "あなたのスニペット",
+    "upgrade": "アップグレード",
+    "feature preview": "機能",
+    "sign out": "サインアウト",
+    "dashboard": "ダッシュボード",
     "pull requests": "プルリクエスト",
-    "explore": "エクスプローラー",
-    "issues": "問題",
+    "issues": "イシュー",
+    "marketplace": "マーケットプレイス",
+    "explore": "探索",
+    "codespaces": "コードスペース",
+    "sponsors": "スポンサー",
     "overview": "概要",
     "repositories": "リポジトリ",
     "projects": "プロジェクト",
+    "jump right in": "参加",
+    "no open projects": "開いているプロジェクトはありません",
+    "no projects have been opened yet.": "まだプロジェクトは作成されていません",
+    "customize your pins": "ピン止めをカスタマイズ",
+    "contribution settings": "貢献者の設定",
+    "learn how we count contributions": "貢献者のカウント方法を知る",
+    "recent activity": "最近のアクティビティ",
+    "all activity": "すべてのアクティビティ",
+    "loading activity...": "アクティビティを読み込み中",
+    "less": "less",
+    "more": "more",
+    "create an organization": "create an organization",
+    "explore more →": "explore more →",
+    "show more": "show more",
+    "working with a team?": "working with a team?",
+    "github is built for collaboration. set up an organization to improve the way your team works together, and get access to more features.": "github is built for collaboration. set up an organization to improve the way your team works together, and get access to more features.",
 
     "__comments-7": "Search", 
     "language:": " 言語:",
