--- a/locales/ja.json
+++ b/locales/ja.json
@@ -165,8 +165,8 @@
     "recovery code authentication failed.": "リカバリーコードの認証に失敗しました。",
     "account recovery": "アカウント回復",
     "first we need to verify an email address": "メールアドレスの認証が必要です",
-    "by sending a one-time password to all addresses associated with this account.": "by sending a one-time password to all addresses associated with this account.",
-    "send one-time password": "OTPコードを送信",
+    "by sending a one-time password to all addresses associated with this account.": "このアカウントに関連するすべてのアドレスにワンタイムパスワードを送信します",
+    "send one-time password": "ワンタイムパスワードを送信",
     "skip this with recovery codes": "リカバリーコードを使用する",
     "if you can locate your two-factor recovery codes you can skip this recovery process.": "if you can locate your two-factor recovery codes you can skip this recovery process.",
     "the file containing your recovery codes may exist on your computer - check  for a file named": "the file containing your recovery codes may exist on your computer - check  for a file named",
@@ -175,15 +175,15 @@
     "to continue to": "続ける",
 
     "confirm your account recovery settings": "アカウントのリカバリー設定を確定",
-    "are your account recovery settings up to date? if not, you risk getting locked out of your account.": "are your account recovery settings up to date? if not, you risk getting locked out of your account.",
+    "are your account recovery settings up to date? if not, you risk getting locked out of your account.": "アカウントリカバリー設定はアップデートしましたか？もししていない場合、アカウントから締め出されるリスクがあります。",
     "update": "更新",
     "confirm": "確定",
     "remind me later": "また後で",
-    "configured": "configured",
-    "no security keys": "no security keys",
-    "not configured": "not configured",
-    "no fallback sms number": "no fallback sms number",
-    "no recovery tokens": "no recovery tokens",
+    "configured": "設定済み",
+    "no security keys": "セキュリティキーなし",
+    "not configured": "設定未完了",
+    "no fallback sms number": "代理SMS番号なし",
+    "no recovery tokens": "リカバリートークンなし",
 
     "__comments-6": "User home", 
     "filter": "フィルター",
@@ -226,12 +226,12 @@
     "recent activity": "最近のアクティビティ",
     "all activity": "すべてのアクティビティ",
     "loading activity...": "アクティビティを読み込み中",
-    "less": "less",
-    "more": "more",
-    "create an organization": "create an organization",
-    "explore more →": "explore more →",
-    "show more": "show more",
-    "working with a team?": "working with a team?",
+    "less": "閉じる",
+    "more": "詳細",
+    "create an organization": "組織を作成",
+    "explore more →": "もっと知る →",
+    "show more": "もっと見る",
+    "working with a team?": "チームで活動する？",
     "github is built for collaboration. set up an organization to improve the way your team works together, and get access to more features.": "github is built for collaboration. set up an organization to improve the way your team works together, and get access to more features.",
 
     "__comments-7": "Search", 
